# Autozap

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  MELHORIAS.md  PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 7f9a4828c29c_templates_nome_meta_e_idioma.py  eed42955c620_estrutura_inicial.py
app/: __init__.py  main.py
app/api/: __init__.py  admin.py  deps.py  middleware.py  webhook.py
app/core/: __init__.py  celery_app.py  config.py  db.py  logging.py  runtime.py  seguranca.py
app/integrations/: __init__.py  ia.py  whatsapp.py
app/models/: __init__.py  agendamento.py  base.py  contato.py  conversa.py  enums.py  evento_metrica.py  intencao.py  mensagem.py  promocao.py  template.py
app/schemas/: __init__.py  admin.py  webhook.py
app/services/: __init__.py  admin.py  agenda.py  agendamento.py  classificador.py  deteccao.py  ingestao.py  janela_24h.py  metricas.py  opt_out.py  processamento.py  rate_limit.py  respostas.py  tempo.py
app/workers/: __init__.py  dependencias.py  runtime.py  sinais.py  tasks.py
tests/: _fabricas.py  _payloads.py  conftest.py  test_admin.py  test_agendamento.py  test_config.py  test_ia.py  test_ingestao.py  test_logging.py  test_middleware.py  test_processamento.py  test_rate_limit.py  test_runtime.py  test_seguranca.py  test_servicos.py  test_smoke.py  test_webhook.py  test_whatsapp.py  test_worker_runtime.py
tests/fakes/: __init__.py  ia.py  rate_limit.py  whatsapp.py
