[project]
name = "autozap"
version = "0.1.0"
description = "Agente de atendimento automático no WhatsApp (Cloud API) com classificação de intenção e respostas via Claude."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "anthropic>=0.49",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "fakeredis>=2.26",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true

# Bibliotecas sem stubs de tipo distribuídos.
[[tool.mypy.overrides]]
module = ["celery.*"]
ignore_missing_imports = true

# O decorator @celery_app.task não é tipado (Celery sem stubs); relaxa apenas isso
# na camada de workers, mantendo o restante do projeto em modo estrito.
[[tool.mypy.overrides]]
module = ["app.workers.*"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
